created app js and tried to make a logical button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Have you already eaten an apple today?</h1>
     <div><p id="first_p">Cause an apple a day...</p>
     <p id="second_p">...keeps the doctor away!</p></div>
-    <button>YES, I ATE ONE!</button>
+    <button id="myButton">YES, I ATE ONE!</button>
+    <div id="appendable"></div>
+    <script src="app.js"></script>
 </body>
 </html>
